chore: use getFirst